_sass/base.scss
/**
 * Our main stylesheet file.
 */
$px-4-size: map-get($spacers, 4) * 1;

/**
* Bug in browser cross compatibility
* @link https://stackoverflow.com/a/50091780
*/

body {
  background-color: map-get($primary-colors, "white");
  /* stylelint-disable */
  text-rendering: optimizeLegibility;
  /* stylelint-enable */
  -webkit-font-smoothing: subpixel-antialiased;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/**
 * Text
 */

h1,
h2,
h3,
h4,
h5,
h6 {
  color: map-get($neutral-colors, 1);
  font-variant-numeric: lining-nums proportional-nums;
  font-feature-settings: "clig" off, "liga" off;
  font-style: normal;
  font-weight: 800;
}

h1 {
  font-family: Gilroy, sans-serif;
  font-size: 48px;
  font-weight: 800;
  line-height: 52px;
  margin-bottom: 24px;
  margin-top: 48px;

  @include media-breakpoint-down(sm) {
    font-size: 36px;
    line-height: 44px;
    margin-bottom: 16px;
    margin-top: 32px;
  }
}

h2 {
  font-family: Gilroy, sans-serif;
  font-size: 34px;
  font-weight: 800;
  line-height: 44px;
  margin-bottom: 24px;
  margin-top: 48px;

  @include media-breakpoint-down(sm) {
    font-size: 28px;
    line-height: 36px;
    margin-bottom: 16px;
    margin-top: 32px;
  }
}

h3 {
  font-family: Gilroy, sans-serif;
  font-size: 24px;
  font-weight: 700;
  line-height: 32px;
  margin-bottom: 16px;
  margin-top: 32px;

  @include media-breakpoint-down(sm) {
    font-size: 20px;
    line-height: 28px;
    margin-bottom: 8px;
    margin-top: 16px;
  }
}

h4 {
  font-family: Gilroy, sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 24px;
  margin-bottom: 8px;
  margin-top: 16px;

  @include media-breakpoint-down(sm) {
    font-size: 16px;
  }
}

h5 {
  font-family: Gilroy, sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 24px;
  margin-bottom: 8px;
  margin-top: 16px;

  @include media-breakpoint-down(sm) {
    font-size: 14px;
  }
}

h6 {
  font-family: Gilroy, sans-serif;
  font-size: 12px;
  font-weight: 700;
  letter-spacing: 0.8px;
  line-height: 16px;
  margin-bottom: 8px;
  margin-top: 16px;
  text-transform: uppercase;
}

p {
  color: map-get($neutral-colors, 1);
  font-family: "Noto Sans", sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 28px;
  margin-bottom: 24px;

  @include media-breakpoint-down(sm) {
    font-size: 16px;
    line-height: 24px;
  }
}

blockquote {
  border-left: 4px solid map-get($secondary-colors, "blue");
  margin-left: 8px;
  margin-right: 8px;
  padding-left: 32px;

  p {
    color: map-get($neutral-colors, 1);
    font-family: "Noto Sans", sans-serif;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 28px;
  }
}

input {
  font-family: 'Noto Sans', sans-serif;
}

.author {
  color: map-get($neutral-colors, 1);
  font-family: "Noto Sans", sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
}

.duration {
  color: map-get($neutral-colors, 6);
  font-family: "Noto Sans Monospace", monospace;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  text-transform: uppercase;
  margin-bottom: 8px;
}

.tagline {
  color: map-get($primary-colors, "black");
  font-family: "Noto Sans Mono", monospace;
  font-feature-settings: "clig" off, "liga" off;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
  letter-spacing: 0.8px;
  text-transform: uppercase;
}

.lead {
  color: map-get($neutral-colors, 1);
  font-family: Gilroy, sans-serif;
  font-size: 32px;
  font-style: normal;
  font-weight: 600;
  letter-spacing: -0.3px;
  line-height: 40px;
  margin-bottom: 48px;
  margin-top: 48px;
}

.sm-label {
  color: map-get($neutral-colors, 1);
  font-family: "Noto Sans Mono", monospace;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  letter-spacing: 0.8px;
  line-height: 24px;
  text-transform: uppercase;
}

/**
 * Bootstrap Text Classes
 */

.fw-bold {
  font-family: Gilroy, sans-serif;
  font-weight: 700;
}

.fst-italic {
  font-family: Gilroy, sans-serif;
  font-style: italic;
}

.fw-bold .fst-italic {
  font-family: Gilroy, sans-serif;
  font-style: italic;
  font-weight: 700;
}

.fw-bolder {
  font-family: Gilroy, sans-serif;
  font-weight: 900;
}

.fw-bolder .fst-italic {
  font-family: Gilroy, sans-serif;
  font-style: italic;
  font-weight: 900;
}

.fw-light {
  font-family: Gilroy, sans-serif;
  font-weight: 300;
}

.fw-light .fst-italic {
  font-family: Gilroy, sans-serif;
  font-style: italic;
  font-weight: 300;
}

.fw-lighter {
  font-family: Gilroy, sans-serif;
  font-weight: 100;
}

.fw-lighter .fst-italic {
  font-family: Gilroy, sans-serif;
  font-style: italic;
  font-weight: 100;
}

.fw-normal,
.fst-normal {
  font-family: Gilroy, sans-serif;
  font-style: normal;
  font-weight: 400;
}

.margin-md-t-72 {
  margin-top: 72px;

  @include media-breakpoint-down(md) {
    margin-top: 0px;
  }
}

/**
 * Nav bar
 */
/* stylelint-disable-next-line */
@media (min-width: 768px) {
  .navbar .navbar-nav .nav-link:hover {
    font-weight: 600 !important;
  }
}
/* ... */

